--- a/We Care/app/src/main/AndroidManifest.xml
+++ b/We Care/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yo7a.healthwatcher">
+    package="com.example.weCare.application">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,8 @@
         android:roundIcon="@drawable/wecare"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".AddContactPopUp">
-            android:theme="@android:style/Theme.Dialog"
-        </activity>
+        <activity android:name=".Symptomate"></activity>
+        <activity android:name=".AddContactPopUp"></activity>
         <activity android:name=".dashboard" />
         <activity
             android:name=".First"
@@ -81,15 +80,15 @@
             android:screenOrientation="portrait" />
     </application>
 
-    <uses-feature android:name="android.hardware.camera.flash" />
     <uses-feature android:name="android.hardware.camera" />
 
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-feature android:name="android.hardware.camera.flash" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
-
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 </manifest>
